Adicionando Health Check na aplicação

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,18 @@
 micronaut:
   application:
     name: fretes
+
+grpc:
+  server:
+    health:
+      enable: true
+
+micronaut.server.port: 8081
+
+endpoints:
+  all:
+    port: 8085
+  health:
+    enable: true
+    sensitive: false
+    details-visible: ANONYMOUS
